bug squashing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,7 @@ body {
 
 .fixed-nav-bar li {
 	display: inline-block;
-	width: 33%;
+	width: 20%;
 	margin: 0;
 	padding: 0;
 }
@@ -50,7 +50,7 @@ body {
 
 .fixed-nav-bar li.nav-search {
 	display: inline-block;
-	width: 33%;
+	width: 25%;
 	margin: 0;
 	padding: 0;
 /*	border-radius: 10px;*/
@@ -255,7 +255,7 @@ body {
 	top: 75px;
 	left: 400px;
 	padding-bottom: 10px;
-	background-color: rgba(0, 0, 0, 0.2);
+	background-color: white;
 	border: 2px solid black;
 	z-index: 100;
 }
